# md407-project-template

./: .gdbinit  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.project  README.md  cmake_install.cmake  compile_commands.json  compile_flags.txt  link.x  projects.cmake  startup.s  upload.py
include/perip/: stm32f4xx.h
include/src/: startup.h
lib/src/: startup.c
src/: main.c
